# PrimeNumbers

./: CMakeLists.txt  Controller.cpp  Controller.hpp  Primes.cpp  Primes.hpp  QtDialogWindow.cpp  QtDialogWindow.hpp  README.md  WindowInterface.hpp  main.cpp
